fix alignment when assign product

--- a/src/components/Collapse/styles/collapse.less
+++ b/src/components/Collapse/styles/collapse.less
@@ -38,9 +38,6 @@
       border-radius: 0 !important;
       box-shadow: @border-bottom-light;
     }
-    :global(.ant-collapse-header-text) {
-      padding-left: 16px;
-    }
   }
 
   &.arrowAlignRight {
